Fix overflow issue for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -34,6 +34,10 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 
+.site-container {
+    overflow-x: hidden;
+}
+
 
 /**** NAVIGATION BAR ****/
 
